manifests/kustomize/options/catalog/overlay/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-catalog
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /api/model_catalog/
      route:
        - destination:
            host: model-catalog-service.kubeflow.svc.cluster.local
            port:
              number: 8080
